Applied changes requested

--- a/prep-css-display/display.css
+++ b/prep-css-display/display.css
@@ -10,8 +10,8 @@ span {
 
 button {
   border: 4px solid red;
-  height 40px
-  width: 200px;40pxwidth40pxwidth40pxwidth40pxwidth40pxwidth
+  height: 40px;
+  width: 200px;
 }
 
 ul {
